Mobile Layout bug fix

--- a/css/style.css
+++ b/css/style.css
@@ -87,12 +87,20 @@ figure {
   @media screen and (max-width: 768px) {
     #colorlib-aside {
       width: 300px;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+      flex-direction: column;
       -moz-transform: translateX(-300px);
       -webkit-transform: translateX(-300px);
       -ms-transform: translateX(-300px);
       -o-transform: translateX(-300px);
       transform: translateX(-300px);
-      padding-top: 4em; } }
+      padding-top: 4em;
+      padding-bottom: 28px; } }
   #colorlib-aside .author-img {
     width: 150px;
     height: 150px;
@@ -1479,6 +1487,14 @@ html.theme-switching #colorlib-aside *:after {
   padding: 0 28px;
   margin-top: 22px;
   text-align: center;
+}
+
+@media screen and (max-width: 768px) {
+  .theme-toggle-wrap {
+    margin-top: auto;
+    padding-top: 32px;
+    padding-bottom: 8px;
+  }
 }
 
 .theme-toggle-btn {
